	  arch/x86/include/qemu, arch/x86/src/i486, and arch/x86/src/qemu.
	* configs/qemu-i486 - "Board" support configurations for verifying the QEME
	  i486 port.
	* arch/arm/src/stm32/stm32_spi.c -- Correct base address of SPI3 (reported by
	  Uros Platise).
	* drivers/mmcsd/mmcsd_sdio.c -- Correct a loop termination condition (also
	  reported by Uros Platise).
	* drivers/mtd/ramtron.c -  Driver for SPI-based RAMTRON NVRAM devices FM25V10
	  (and others).  Contributed by Uros Platise.
	* examples/nsh and tools/mkromfsimg.sh -- Add support for platform-specific
	  ROMFS-based NSH start-up scripts.
	* drivers/uart_16550.c and include/nuttx/uart_16550.h - Support for a generic
	  16550 UART.
	* configure/qemu-i486/nsh - QEMU NSH example.
	* ../apps - The apps directory add-on was created by Uros Platise.  It
	  supports a set of end-user applications than can be executed on top of
	  NSH.  Think of it this way:  In a buckled-up embedded application, your
	  end-user programs will probably have their own dedicated start-up logic.
	  But, during development, you might want to have you applications
	  available and executable from the NSH command line.  This apps/ addon
	  (and NSH hooks) was contributed by Uros to accomplish just that.
	* sched/sched_waitpid() and include/sys/wait.h - Provides a simple and
	  very incomplete implementation of waitpid().  waitpid() is only available
	  if CONFIG_SCHED_WAITPID is defined in your configuration file.
	* sched/atexit.c and sched/exit.c - The atexit function is not frequently
	  used.  In order to save a few bytes, it is now conditioned on
	  CONFIG_SCHED_ATEXIT.  It your application is currently using atexit(),
	  you will need to add CONFIG_SCHED_ATEXT to your configuration file.
	* drivers/net/slip.c - Add a SLIP driver (untested on initial check-in).
	* configs/olimex-lpc1766stk/slip-httpd - An example that uses SLIP to
	  provide a serial-port based THTTPD web server.

5.20 2011-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>
